--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
 
     <div class="container">
+      <h3 style.color="aqua">Refresh Me</h3>
       <h1>Refresh Me</h1>
 
       <div class="dice">
